# pr

./: .gitignore  1.py  A.py  D.cpp  README.md  factor.cpp  hash.cpp
study/: CMakeLists.txt  Generator.cpp  LongTest.cpp  Template.cpp  a.out  gcd.cpp  subhash.cpp
study/.cph/: .K_.cpp_91736ba73b9e96a81839eebcb7894b67.prob
study/598/: A.cpp  B.cpp  B_1.cpp  D.cpp
study/acmp/: 11.cpp  11.py  1180.cpp  1181.cpp  1317.cpp  132.cpp  132Alt.cpp  1360.cpp  1381.cpp  152.cpp  38.cpp  712.cpp
study/algo2020/: 1277.cpp  7412.cpp  7414_1.cpp  eratosfen.cpp  factor.cpp
study/basegraphs/: 2sat.cpp  A4.cpp  A4errichto.cpp  C3  C3.cpp  C4  C4.cpp  D3.cpp  E3  K3.cpp  M3.cpp  bridges  condensation.cpp  dijkstraRecoveryAnswer.cpp  topSortMy  topSortMy.cpp  uniqueTopSort  uniqueTopSort.cpp
study/basicgraphs/: C2.cpp
study/binsearch/: 440.cpp  490.cpp  490bin  Practice1D.cpp  Practice2A.cpp  Practice2B  Practice2B.cpp  Practice2D.cpp  Practice2F.cpp  Practice3A.cpp  Test2.cpp  Test5.cpp  Test6.cpp
study/bitwiseOperations/: 121  121.cpp  125  125.cpp  126  126.cpp  587  587.cpp  80.cpp
study/bor/: 1044.cpp
study/cherekosh2020/: O_P.py
study/cognitive/: A.cpp  B.cpp  C.cpp  D.cpp  Dslow.cpp  G.cpp  H.cpp  I.cpp  fast  slow  stress.py  test.in
study/ege/: 25.cpp  A.cpp  a.out  factor.cpp
study/geometry/: 1353.cpp  3099.cpp  base.cpp
study/hashes/: SiriusB.cpp  SiriusD.cpp  SiriusH.cpp  SiriusI.cpp  SiriusJ.cpp  SiriusK.cpp  SiriusL.cpp  SiruisF.cpp  a.out  hashCalc.cpp  sameHashStringGenerator.cpp  siriusJuniorB.cpp  siriusJuniorK.cpp
study/infobattle/: C.cpp  (+4 more)
(+1806 files in other folders)
