cmake_minimum_required(VERSION 3.17)
project(study)

set(CMAKE_CXX_STANDARD 20)

#add_executable(study geometry/base.cpp)
#add_executable(study codeforces/1585/D.cpp)
#add_executable(study atcoder/abc230/E.cpp)
#add_executable(study cpm/topsortScc/F.cpp)
add_executable(study tinkoff/classes/thematicContests/maths/A.cpp)
#add_executable(study distours/vseros/12.11.2021/B.cpp)
#add_executable(study open/2021/shortElimination/C.cpp)
