cmake_minimum_required(VERSION 3.17)
project(study)

set(CMAKE_CXX_STANDARD 20)

#add_executable(study geometry/3099.cpp)
#add_executable(study hseOlymp/finals/C1.cpp)
#add_executable(study codeforces/1644/C.cpp)
#add_executable(study cpm/dsu/D.cpp)
#add_executable(study tinkoff/classes/thematicContests/dpOptimization/A.cpp)
#add_executable(study distours/vseros/12.11.2021/B.cpp)
add_executable(study mosh/elimination2022/C.cpp)
