cmake_minimum_required(VERSION 3.17)
project(study)

set(CMAKE_CXX_STANDARD 17)

#add_executable(study geometry/3099.cpp)
#add_executable(study sortMe/5/E.cpp)
#add_executable(study codeforces/1647/D.cpp)
#add_executable(study cpm/d&q/B.cpp)
#add_executable(study tinkoff/classes/thematicContests/dpOptimization/A.cpp)
#add_executable(study distours/vseros/12.11.2021/B.cpp)
add_executable(study codeforces/technocup/finals2022/D.cpp)
